--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="name">Name</string>
     <string name="username">Enter your Username</string>
     <string name="pwd">Enter your Password</string>
+    <string	name="instructions">Enter	a	book	name,	or	part	of	a book	name,	or	just	some	text	from	a	book	to	find the	full	book	title	and	who	wrote	the	book!</string>
+    <string	name="button_text">Search	Books</string>
+    <string	name="input_hint">Enter	a	Book	Title</string>
 </resources>
