--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,17 @@
     <string name="name">Name</string>
     <string name="username">Enter your Username</string>
     <string name="pwd">Enter your Password</string>
-    <string name="instructions">Enter	a	book	name,	or	part	of	a book	name,	or	just	some	text	from	a	book	to	find the	full	book	title	and	who	wrote	the	book!</string>
-    <string name="button_text">Search	Books</string>
-    <string name="input_hint">Enter	a	Book	Title</string>
+    <string name="instructions" translatable="false">Enter	a	book	name,	or	part	of	a book	name,	or	just	some	text	from	a	book	to	find the	full	book	title	and	who	wrote	the	book!</string>
+    <string name="button_text" translatable="false">Search	Books</string>
+    <string name="input_hint" translatable="false">Enter	a	Book	Title</string>
+    <string name="title_activity_observer" translatable="false">ObserverActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
+    <string name="next" translatable="false">Next</string>
+    <string name="previous" translatable="false">Previous</string>
+
+    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
+    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
+    <string name="todo" translatable="false">TODO</string>
 </resources>
